# py-stock-screen

./: .env.example  .gitignore  README.md  pyproject.toml  run_app.py  scripts.py  strategy_template.py  test_nsepython.py
src/stock_screener/: __init__.py  app.py  audit_logger.py  data_provider.py  data_sources.py  screener.py  strategy.py
